merge new nested keys into existing config sections